--- a/content/css/site.css
+++ b/content/css/site.css
@@ -245,6 +245,7 @@ a:hover {
 .title-page h1 {
   font-size: 28px;
   font-weight: 600;
+  margin-bottom: 20px;
 }
 /*  */
 main {
@@ -299,183 +300,4 @@ main {
 .card_statusAtivo p,
 .card_statusAtivo i {
   color: var(--bg);
-}
-
-.table {
-  position: relative;
-}
-.table tr {
-  box-shadow: 1px 1px 0.2em var(--bg);
-  border-radius: 100px;
-}
-.table tr td {
-  padding: 1.2rem;
-  font-size: 1rem;
-  color: var(--corp);
-}
-.table .odd {
-  background-color: var(--bg2);
-}
-.table .even {
-  background-color: var(--bg);
-}
-thead .rounded {
-  box-shadow: none;
-}
-.rounded th {
-  color: var(--corp);
-}
-.table thead.top-table th {
-  text-align: center;
-}
-.table .top-table {
-  color: var(--corp);
-  font-size: 1.2rem;
-  font-weight: 600;
-  box-shadow: none;
-}
-.table tbody tr {
-  color: var(--bg);
-  text-align: center;
-  font-weight: bold;
-}
-.paginate_button {
-  margin: 0 3px;
-}
-.paginate_button.page-item.active {
-  font-size: 13px;
-}
-.page-item.active .page-link {
-  z-index: 1;
-  color: var(--clear);
-  background-color: var(--bg);
-  box-shadow: 2px 1px 0.2em var(--bg);
-  border-radius: 15px;
-}
-.page-item.active .page-link:focus {
-  box-shadow: 2px 1px 0.2em var(--bg);
-}
-.page-item.disabled .page-link {
-  background-color: var(--bg);
-  color: var(--corp);
-  border: none;
-  font-size: 13px;
-}
-.paginate_button.page-item a {
-  background-color: var(--bg);
-  font-size: 13px;
-  border: none;
-  color: var(--corp);
-  border-radius: 15px;
-}
-.paginate_button.page-item a:hover {
-  box-shadow: 2px 1px 0.2em var(--bg);
-}
-.dt-buttons {
-  display: none;
-}
-.dataTables_wrapper {
-  margin-top: 10px;
-  background: var(--bg);
-  box-shadow: 1px 1px 0.2em var(--bg);
-  padding: 1rem;
-  border-radius: 32px;
-  padding-top: 4rem;
-}
-.dataTables_info {
-  color: var(--corp);
-}
-.dataTables_length {
-  display: none;
-}
-.details-control {
-  display: none;
-}
-.dataTables_filter {
-  position: absolute;
-  top: 25px;
-  color: var(--corp);
-}
-.dataTables_filter label {
-  font-size: 11px;
-}
-.dataTables_filter input {
-  background: var(--bg2);
-  border-radius: 50px;
-  height: 48px;
-  width: 350px !important;
-  color: var(--corp);
-  padding: 0px 20px;
-  padding-right: 40px;
-  border: none;
-  box-shadow: 2px 1px 0.2em var(--border);
-}
-.dataTables_filter input:hover,
-.dataTables_filter input:focus {
-  background: var(--bg);
-  box-shadow: 0 0 2rem var(--clear);
-  color: var(--corp);
-}
-.dataTables_filter label:after {
-  content: "";
-  display: block;
-  background-image: url(content\img\download.png);
-  background-repeat: no-repeat;
-  width: 50px;
-  height: 22px;
-  right: -13px;
-  top: 13px;
-  position: absolute;
-}
-.form-control-sm:focus label:after {
-  background-image: none;
-  background-color: var(--bg);
-}
-
-.btn_data {
-  color: var(--clear);
-  background-color: var(--bg);
-  width: 100%;
-}
-.btn_menu {
-  background: none;
-}
-.table_disable {
-  display: none;
-}
-
-.row {
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-  flex-wrap: wrap;
-  margin-right: -15px;
-  margin-left: -15px;
-}
-tbody {
-  display: table-row-group;
-  vertical-align: middle;
-  border-color: inherit;
-}
-.select {
-  border: 1px solid var(--gray);
-  box-sizing: border-box;
-  filter: drop-shadow(12px 12px 12px rgba(0, 0, 0, 0.06));
-  border-radius: 10px;
-  margin: 10px;
-  padding: 15px;
-  color: var(--gray);
-  background: none;
-  width: 100%;
-}
-
-.btn-form {
-  background-color: var(--corp);
-  color: var(--bg);
-  border: 1px solid var(--corp);
-  border-radius: 69px;
-  padding: 12px 24px;
-  margin: 0 10px;
-  width: 100%;
-  font-weight: bold;
 }
